Add animation to current character highlight for improved visibility

--- a/style.css
+++ b/style.css
@@ -123,4 +123,14 @@ body {
 }
 .current{
     text-decoration: underline;
+    animation: animation--underline 1s ease infinite;
+    ;
+}
+
+
+@keyframes animation--underline{
+    50%{
+        opacity: 0;
+        background-color: aquamarine;
+    }
 }
